<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- New -->
    <string name="social">Social</string><string name="authorization">Authorisation</string>
    <string name="upgrade_me">Upgrade me</string>
 <string name="map_city">You are now changing to your city to view what\'s near you</string>
 <string name="map_myloc">You are now changing to your current location to view what\'s near you</string>
 <string name="new_account">You have no account, would you like to create one?</string>
 <!--  -->
    <string name="app_name">ClubCrawl</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connectionerror">Connection is slow or some error in apis.</string>
    <string name="internetFailure">Internet is not available.Please try again later.</string>
    <string name="strBlankFieldsError">Username and Password fields are mandatory.</string>
    <string name="strFriends">Friends</string>
    <string name="strTrend">Trending this month in</string>
    <string name="strFeeds">Direct feed</string>
    
   
    <string name="strNightsOut">Nights Out</string>
    <string name="strInviteFriends">Invite friends out</string>
    <string name="strWhosOut">Who\'s out?</string>
    <string name="strMessaging">Messaging</string>
    <string name="strSignout">Sign out</string>
    <string name="strNotification">Notifications</string>
    <string name="strSuccessLogin">Login Successful.</string>
    <string name="strForgetText">Just pop in your email and we\'ll have it sorted in a jiffy.</string>
    <string name="strEmail">Email</string>
    <string name="strSubmit">Submit</string>
    <string name="strForgottenPassword">Forgotten Password</string>
    <string name="strEmptyEmailError">Please enter email address</string>
    <string name="strValidEnailErro">Please enter valid email address</string>
    <string name="strNoResultFound">No Result Found</string>
	<!-- MyProfile -->
	<string name="status">From Santiago Cali,enjoy eating, cooking, sports and playing, video games I have tendency to forget. </string>
    <string name="name">mezmvester</string>
    <string name="page">25 years old</string>
    <string name="purl">www.ftbcool.com</string>
    <string name="relationship">In a relationship</string>
    <string name="no_of_posts">3000</string>
    <string name="posts">posts</string>
    <string name="no_of_followers">17k</string>
    <string name="follow">+Follow</string>
    <string name="followers">followers</string>
    <string name="no_of_followings">2000</string>
    <string name="following">Following</string>
    <string name="description">description</string>
    <string name="No_of_venues">Following 400 venues</string>
     <string name="compose_post">+Compose Post</string>
     <string name="Follower_Request">New follower requests</string>
     <string name="Follower_Request_Name">Piyush Jain</string>
     <string name="Follower_Request_day">Yesterday</string>
     <string name="post">It\s time that I got myself a job instead of bumming around </string>
     <string name="post_no">3</string>
     <string name="post_like">Like</string>
      <string name="post_share">Share</string>
      <string name="view_more_post">View more posts</string>
    <!-- Tab Bar -->
    <string name="home">Insight</string>
    <string name="search">Search</string>
    <string name="nearMe">NearMe</string>
    <string name="allOffers">All Offers</string>
    <string name="more">More</string>
    <string name="trend">Trends</string>
    <!-- Booking Screen -->
    <string name="strDateTime">Date &amp; Time</string>
    
    <!-- Direct feed -->
    <string name="direct_feed">Direct Feed</string>
    <string name="join_party">Join Party</string>
   	<string name="no_of_likes">44</string>
   	<string name="strLike">Like</string>
   	<string name="strShare">Share</string>
    
     <!-- Chatting page -->
    <string name="userName">Karl</string>
     <string name="btnSend">Send</string>
     <string name="userMessage">Hello what are you doing dude?</string>
    <string name="userFriendMessage">Well i thought i was dreaming but i just saw that girl , in tonight hahaha </string>
        <string name="msgday">2 days ago</string>
    
    <!-- Sign up -->
    <string name="enterEmail">Enter your email</string>
    <string name="enterFirstName">Enter your first name</string>
     <string name="enterLastName">Enter your last name</string>
    <string name="enterUsername">Create a username</string>
    <string name="enterPassword">Create a password</string>
    <string name="sex">Enter your gender</string>
    <string name="enterAge">Enter your age</string>
    <string name="enterPhone">Enter your phone number</string>
    <string name="enterWebsite">Enter website address</string>
    <string name="maritalstatus">Enter your marital status</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="single">Single</string>
    <string name="strRelationship">In a relationship</string>
    <string name="strEngaged">Engaged</string> 
     <string name="married">Married</string> 
      <string name="strOpenRelation">In an open relationship</string> 
       <string name="strComplicated">It\'s complicated</string> 
        <string name="strSeprated">Separated</string> 
         <string name="strDivorced">Divorced</string> 
         <string name="strWidowed">Widowed</string> 
       
    <string name="fullName">Enter full name (Optional)</string>
    <string name="phoneNo">What\'s your phone number? (Optional)</string>
    <string name="signUp">Sign up</string>
     <string name="next">Next</string>
    <string name="friendsCanSeeNumber">Only your close friends that you add or accept will be able to see your number. </string>
   
    <string name="strSuccessSignUp">Sign up Successful.</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="chooseAge">Choose Age</string>
    <string name="chooseGender">Choose Gender</string>
    <string name="sharewith">Share with</string>
    <string name="strFacebook">Facebook</string>
    <string name="strTwitter">Twitter</string>
    <string name="chooseImage">Choose Image</string>
<string name="chooseMaritalStatus">Marital Status</string>
   
    <!-- My Post Page -->
    <string name="btnPost">Post</string>
	<string name="tv160">160</string>
	<string name="tvAdam">Adam</string>
	<string name="tvmezmyster">mezmyster</string>
	<string name="btnGoingSomewere">Going somewhere?</string>
	<string name="btnImage">Image</string>
    
    <!-- Location Selection Page -->
    <string name="strSelectCity">Select your city</string>
    <string name="strDone">Done</string>
	<string name="MsgCityNotAvailable">If your city is not available then you should not be waiting too long!</string>
    <!-- My Profile Page -->
    <string name="strPost">Post</string>
    <string name="strSave">Save</string>
    <string name="strEdit">Edit</string>
    <string name="strMyProfile">Me</string>
    <string name="strMyPosts">My Posts</string>
    <string name="strUpdateStatus">Update status</string>
    <string name="strUpdateVenue">What venue are you heading to?</string>
    <string name="strBlankStatuserr">Enter some text or image for updating status.</string>
    <string name="strValidVenueErros">Enter a valid Venue.</string>
    <string name="strVenueUpdateSucc">Venue updated successfully.</string>

    <!-- Edit Profile Page -->
    <string name="save">Save</string>
    <string name="editProfile">Edit Profile</string>
    <string name="editfollowers">Followers</string>
    <string name="editfollowersRequest">Followers Request</string>
      <string name="editfollowing">Following</string>
      <string name="editfollowingvenues">Following Venues</string>
      <string name="editlikers">Likers</string>
    <string name="editfirstName">First Name</string>
    <string name="editlastName">Last Name</string>
    <string name="edituserName">User Name</string>
    <string name="editPhoneNo">Phone number</string>
    <string name="strProfilePicUpdated">Profile Pic Updated.</string>

    <!-- Friends Page -->
    <string name="friends">Friends</string>
    <string name="inviteFriendsOut">Invite friends out</string>
    <string name="requests">Requests</string>

    <!-- Feeds Page -->
    <string name="notifications">Notifications</string>
    <string name="notificationDeleteError">Notification can not be deleted.</string>

    <!-- Nights Out Page -->
    <string name="btnUpcomingEvents">Upcoming Events</string>
    <string name="btnInvites">Invites</string>
    <string name="strComment">Comment</string>
    <string name="strOverview">Overview</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="maybe">Maybe</string>
    <string name="enterString">Enter some text</string>
    <string name="nightsOut">Nights out</string>

    <!-- Invite People -->
    <string name="ok">Ok</string>
    <string name="invitePeople">Invite People</string>
    <string name="strSelectFriend">Select Friend</string>

    <!-- Club Detail Page -->
    <string name="strBooknow">Book now</string>
    <string name="strCallNow">Call now</string>
    
   <!--  Load More -->
   <string name="ptr_pull_to_refresh">Pull to refresh</string>
      <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing…</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="load_more">Loading more Announcements</string>
    <string name="load_more_data">Loading more Data</string>
    <string name="load_more_videos">Loading more Videos</string>
    <string name="load_more_events">Loading more Events</string>
    <string name="load_more_press_release">Loading more Press Release</string>
    <string name="load_more_notifications">Loading more Notifications</string>
    <string name="load_more_news">Loading more News</string>
    <string name="load_more_programs">Loading more programs</string>
    <string name="load_more_tenders">Loading more tenders</string>
    <string name="load_more_careers">Loading more</string>
    <string name="load_more_photos">Loading more photos</string>

</resources>