<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:gravity="left"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="@string/chooseMaritalStatus"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/tvSingle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="@string/single"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_grey_Color" />

        <TextView
            android:id="@+id/tvInRelationship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="@string/strRelationship"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_grey_Color" />

        <TextView
            android:id="@+id/tvEngaged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="@string/strEngaged"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_grey_Color" />

        <TextView
            android:id="@+id/tvmarried"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="@string/married"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_grey_Color" />

        <TextView
            android:id="@+id/tvOpenRelationship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="@string/strOpenRelation"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_grey_Color" />

        <TextView
            android:id="@+id/tvComplicated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="@string/strComplicated"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_grey_Color" />

        <TextView
            android:id="@+id/tvSeprated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="@string/strSeprated"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_grey_Color" />

        <TextView
            android:id="@+id/tvDivorced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="@string/strDivorced"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_grey_Color" />

        <TextView
            android:id="@+id/tvWidowed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="@string/strWidowed"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_grey_Color" />
    </LinearLayout>

</ScrollView>