<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical" >
    
     <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseImage"
        android:background="@color/background_color"
        android:textColor="@android:color/white"
        android:gravity="left"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="24dp"/>
    

    <TextView
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="left"
        android:text="@string/gallery"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@color/background_grey_Color" />

    <TextView
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="left"
        android:text="@string/camera"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

</LinearLayout>