<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff2763" >

    <include
        android:id="@+id/titleLayout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/header_height"
        layout="@layout/custom_title_layout" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLayout"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvEmailText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/strForgetText"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/forgot_edit_text_border"
            android:hint="@string/strEmail"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnEmailSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="#FF4379"
            android:padding="10dp"
            android:text="@string/strSubmit"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>