<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

         <com.linchpin.clubcrawl.helper.ImageViewRounded
            android:id="@+id/ivPostProfilePic"
            style="@style/CircularImage"
            android:contentDescription="@string/description"
            android:src="@drawable/no_img_jst_yet"
           /> 

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvPostUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="Hello"
                android:textColor="@color/background_color" />

            <TextView
                android:id="@+id/tvPostDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPostUsername"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/Follower_Request_day"
                android:textColor="#AFA6A6" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_textview"
            android:padding="7dp"
            android:autoLink="web"
            android:layout_marginTop="5dp"
            android:text="@string/post"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" >

            <ImageView
                android:id="@+id/ivLikeLogo"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="3dp"
                android:contentDescription="@string/description"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tvNoOfLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/ivLikeLogo"
                android:text="@string/post_no"
                android:textColor="@color/background_color"
                android:textStyle="bold"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlShareLike"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/rlLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/ivLike"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/description"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tvLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/ivLike"
                android:text="@string/post_like"
                android:textColor="#808080"
                android:textSize="14dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" >

            <ImageView
                android:id="@+id/ivShare"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/description"
                android:src="@drawable/share48x" />

            <TextView
                android:id="@+id/tvShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/ivShare"
                android:text="@string/post_share"
                android:textColor="#808080"
                android:textSize="14dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>
<View 
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:layout_marginTop="10dp"
    android:background="#F2F2F2"/>
</LinearLayout>